# ComfyUI-ArtistStyleTranslator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  artist_database.py  knowledge_base.py  model_adapters.py  nodes.py  profile_formatter.py  prompt_builder.py  pyproject.toml  style_engine.py
examples/: README.md  basic_artist_translation.json
providers/: README.md  __init__.py  base_provider.py  builtin_provider.py  external_adapter.py  external_profile_adapter.py  external_provider.py  ollama_provider.py  provider_contract.py
resolver/: __init__.py  artist_style_resolver.py
tests/: __init__.py  test_artist_database.py  test_artist_style_resolver.py  test_external_profile_adapter.py  test_knowledge_base.py  test_knowledge_workflow.py  test_model_adapters.py  test_nodes.py  test_ollama_provider.py  test_prompt_builder.py  test_provider_contract.py  test_semantic_profile_preview.py  test_semantic_profile_preview_node.py  test_semantic_provider_interface.py  test_style_engine.py  test_v162_integration.py  test_v170_prompt_compatibility.py  test_v171_pilot_artist.py  test_v173_artist_batch.py
tools/: test_node_import.py
