[project]
name = "comfyui-artist-style-translator"
version = "1.6.2"
description = "An offline semantic style engine for model-adapted ComfyUI prompts."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ComfyUI-ArtistStyleTranslator Contributors" },
]
dependencies = []
